--- a/Lab_5/css/style.css
+++ b/Lab_5/css/style.css
@@ -38,3 +38,12 @@ output{
   width: 250px;
   height: 50px;
 }
+#Result_3{
+  margin-left: 30px;
+}
+footer
+{
+	color:#A4A4A4;
+	margin-top: 20px; 
+	left: 0; bottom: 0;
+}
